Roadmap alignnment fixes

--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ img {
   color:  gray;
   width: 230px;
   top: 23%;
-  left: 7% !important;
+  left: 15% !important;
 }
 
 .roadmap-text-september {
@@ -395,7 +395,7 @@ img {
   color:  gray;
   width: 230px;
   top: 62%;
-  left: 15% !important;
+  left: 19% !important;
 }
 
 .roadmap-text-december {
@@ -422,7 +422,7 @@ img {
   color:  gray;
   width: 230px;
   top: 102%;
-  left: 7% !important;
+  left: 15% !important;
 }
 
 .roadmap-text-2025 {
@@ -431,7 +431,7 @@ img {
   color:  gray;
   width: 230px;
   top: 102%;
-  left: 35% !important;
+  left: 39% !important;
 }
 
 .roadmap-text-2026 {
@@ -456,7 +456,7 @@ img {
   font-size: 20px;
   position: absolute;
   z-index: 1;
-  left: 15%;
+  left: 16%;
 }
 
 .september {
